--- a/src/styles/app.module.scss
+++ b/src/styles/app.module.scss
@@ -1,10 +1,11 @@
 // @import 'variables.scss';
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .content-app {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
+  flex: 1;
 }
