--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -151,3 +151,14 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+.ant-picker-clear {
+  width: 130%;
+  right: -12px !important;
+  top: 10px !important;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 11px 0 0;
+  height: 32px;
+}
