--- a/src/styles/client.module.scss
+++ b/src/styles/client.module.scss
@@ -161,6 +161,7 @@
         img {
           width: 50px;
           height: 50px;
+          border-radius: 20px;
         }
       }
 
@@ -308,6 +309,7 @@
     img {
       width: 200px;
       height: 200px;
+      border-radius: 20px;
     }
   }
 }
